--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -117,18 +117,32 @@
         </div>
       </section>
 
-      <section class="section_offset bg_light_2 p_bottom_0">
-        <div class="container t_align_c">
-          <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">More about VirtuTV</h3>
-          <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for journalists, video bloggers, and podcasters. </p>
-          <div class="relative screens">
-            <img class="layer_2" src="images/prototype09.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="600" width="60%" height="80%">
+      <section class="section_offset p_sm_top_0">
+        <div class="container mobile_friendly">
+          <div class="row">
+            <div class="col-lg-5 col-md-4" data-appear-animation="fadeInUp" data-appear-animation-delay="400">
+              <h3 class="color_dark fw_light m_bottom_40 m_xs_top_0">Features</h3>
+              <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include support for various cryptocurrencies, creator profiles, and the option to set pricing for your content. Users get paid for streaming content. </p>
 
-            <img class="layer_1" src="images/prototype08.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="800" width="59%" height="100%">
-            <img class="layer_3" src="images/prototype09.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="1000" width="60%" height="80%">
+              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Tokens</h5>
+              <p class="fs_large m_bottom_45 fw_light">The VirtuTV platform will include support for Ether, Bitcoin and Virtucoin. </p>
+
+              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Platform</h5>
+              <p class="fs_large m_bottom_45 fw_light">Some of the features of the platform include an online waller, unlimited video uploads, a user profile and dashboard, private link sharing, priority support, and much more. </p>
+
+              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Monetization</h5>
+              <p class="fs_large m_bottom_45 fw_light">Perpetually monetize any video in seconds. Creators' can be compensated in three ways: price setting content, receiving rewards on a one-time, peer-to-peer basis, and receiving rewards per time interval i.e., monthly.</p>
+
+            </div>
+            <div class="col-lg-7 col-md-7" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
+              <div class="relative tablet">
+                <img src="images/mobileview02.png">
+              </div>
+            </div>
           </div>
         </div>
       </section>
+
       <section class="section_offset image_bg_7" id="how_it_works">
         <div class="container">
           <div class="row">
@@ -158,32 +172,19 @@
           </div>
         </div>
       </section>
+      <section class="section_offset bg_light_2 p_bottom_0">
+        <div class="container t_align_c">
+          <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">More about VirtuTV</h3>
+          <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for journalists, video bloggers, and podcasters. </p>
+          <div class="relative screens">
+            {{!-- <img class="layer_2" src="images/prototype09.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="600" width="60%" height="80%"> --}}
 
-      <section class="section_offset p_sm_top_0">
-        <div class="container mobile_friendly">
-          <div class="row">
-            <div class="col-lg-5 col-md-4" data-appear-animation="fadeInUp" data-appear-animation-delay="400">
-              <h3 class="color_dark fw_light m_bottom_40 m_xs_top_0">Features</h3>
-              <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include support for various cryptocurrencies, creator profiles, and the option to set pricing for your content. Users get paid for streaming content. </p>
-
-              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Tokens</h5>
-              <p class="fs_large m_bottom_45 fw_light">The VirtuTV platform will include support for Ether, Bitcoin and Virtucoin. </p>
-
-              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Platform</h5>
-              <p class="fs_large m_bottom_45 fw_light">Some of the features of the platform include an online waller, unlimited video uploads, a user profile and dashboard, private link sharing, priority support, and much more. </p>
-
-              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Monetization</h5>
-              <p class="fs_large m_bottom_45 fw_light">Perpetually monetize any video in seconds. Creators' can be compensated in three ways: price setting content, receiving rewards on a one-time, peer-to-peer basis, and receiving rewards per time interval i.e., monthly.</p>
-
-            </div>
-            <div class="col-lg-7 col-md-7" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
-              <div class="relative tablet">
-                <img src="images/mobileview02.png">
-              </div>
-            </div>
+            <img class="layer_1" src="images/prototype08.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="800" width="100%" height="100%">
+            {{!-- <img class="layer_3" src="images/prototype09.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="1000" width="60%" height="80%"> --}}
           </div>
         </div>
       </section>
+      <br>
       <section class="intro">
         <div class="container mobile_friendly t_align_c" data-appear-animation="fadeInUp">
           <h3 class="color_dark fw_light m_bottom_40 m_xs_top_0">Timeline</h3>
