--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -342,10 +342,13 @@
           </div>
           <div class="col-lg-8 col-md-6 col-sm-8 d_table_cell d_xs_block p_xs_hr_0 v_align_m f_none t_align_r t_xs_align_c">
             <ul class="hr_list d_inline_b social_icons m_bottom_8">
-              <li class="m_right_8"><a href="" class="color_grey_light facebook circle icon_wrap_size_1 d_block"><i class="icon-facebook-1"></i></a></li>
-              <li class="m_right_8"><a href="" class="color_grey_light twitter circle icon_wrap_size_1 d_block"><i class="icon-twitter-1"></i></a></li>
-              <li class="m_right_8"><a href="" class="color_grey_light github circle icon_wrap_size_1 d_block"><i class="icon-github-squared"></i></a></li>
-              <li class="m_right_8"><a href="" class="color_grey_light github circle"><i class="fa fa-reddit fa-lg"></i></a></li>
+              <li class="m_right_8"><a href="" class="color_grey_light facebook icon_wrap_size_1 d_block"><i class="fa fa-facebook fa-lg"></i></a></li>
+              
+              <li class="m_right_8"><a href="" class="color_grey_light twitter icon_wrap_size_1 d_block"><i class="fa fa-twitter fa-lg"></i></a></li>
+              
+              <li class="m_right_8"><a href="" class="color_grey_light github icon_wrap_size_1 d_block"><i class="fa fa-github fa-lg"></i></a></li>
+              
+              <li class="m_right_8"><a href="" class="color_grey_light vimeo icon_wrap_size_1 d_block"><i class="fa fa-reddit fa-lg"></i></a></li>
             </ul>
             <br>
             <ul class="hr_list fs_small color_grey_light d_inline_b">
