--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -194,33 +194,33 @@
       <section class="timeline image_bg_17">
         <ul>
           <li>
-            <div class="fw_light">
-              <time>June 2017 </time> Whitepaper published.
+            <div class="fw_normal">
+              <time class="color_green">June 2017 </time> Whitepaper published.
             </div>
           </li>
           <li>
-            <div class="fw_light">
-              <time>July 2017 </time> Website launched.
+            <div class="fw_normal">
+              <time class="color_green">July 2017 </time> Website launched.
             </div>
           </li>
           <li>
-            <div class="fw_light">
-              <time>July 2017 </time> 1st token crowdsale.
+            <div class="fw_normal">
+              <time class="color_green">July 2017 </time> 1st token crowdsale.
             </div>
           </li>
           <li>
-            <div class="fw_light">
-              <time>Quarter 3 2017</time> Alpha MVP with basic functionality. Video, and Audio content. Open to crowdsale participants only.
+            <div class="fw_normal">
+              <time class="color_green">Quarter 3 2017</time> Alpha MVP with basic functionality. Video, and Audio content. Open to crowdsale participants only.
             </div>
           </li>
           <li>
-            <div class="fw_light">
-              <time>Quarter 4 2017 - Quarter 1 2018</time> Beta with advanced functionality. Open to the public participants. 
+            <div class="fw_normal">
+              <time class="color_green">Quarter 4 2017 - Quarter 1 2018</time> Beta with advanced functionality. Open to the public participants. 
             </div>
           </li>
           <li>
-            <div class="fw_light">
-              <time>Quarter 1-2 2018</time> Gamma with advanced features. Open source SDKs and APIs. Open to the public.  
+            <div class="fw_normal">
+              <time class="color_green">Quarter 1-2 2018</time> Gamma with advanced features. Open source SDKs and APIs. Open to the public.  
             </div>
           </li>
         </ul>
