--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -16,7 +16,7 @@
         <figure class="t_align_c">
           <img src="images/pavank.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
           <figcaption>
-            <h4 class="m_bottom_5"><a href="#" class="color_dark">Pavan Katepalli</a></h4>
+            <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/pavankat/" class="color_dark" target="_blank">Pavan Katepalli</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Co-founder, Full-stack developer</i>
             <p class="m_bottom_15">Pavan is a seasoned internet and education entrepreneur with significant startup experience. He taught at UC Berkelely, Rutgers and Barnard College. He is the founder of Inrtracker.com, a personal health management tool designed for Warfarin patients, and Chief Learning Officer of Trilogy Education Services, a technology education company, which he helped scale to over 500 colleges across the country.</p>
             <ul class="d_inline_b social_icons">
@@ -28,9 +28,9 @@
       <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
         <!--person team-->
         <figure class="t_align_c">
-          <img src="images/vinp.jpg" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
+          <img src="images/vp.jpg" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
           <figcaption>
-            <h4 class="m_bottom_5"><a href="#" class="color_dark">Vincent Porta</a></h4>
+            <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/vincent-porta-50952949/" class="color_dark" target="_blank">Vincent Porta</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Co-founder, Full-stack developer</i>
             <p class="m_bottom_15">Vincent is a full-stack and open source developer. Vincent's built a few notable NPM packages that have consistently been the most downloaded and used. Prior to becoming a professional web developer, he was involved in real estate sales in the NYC Metro Area, and will be pursing a Master's Degree in Software Engineering in the Fall of 2017.</p>
             <ul class="d_inline_b social_icons">
@@ -44,7 +44,7 @@
         <figure class="t_align_c">
           <img src="images/nickw.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
           <figcaption>
-            <h4 class="m_bottom_5"><a href="#" class="color_dark">Nick West</a></h4>
+            <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/nick-west-67471742/" class="color_dark" target="_blank">Nick West</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">React & React Native developer</i>
             <p class="m_bottom_15">Nick has been working as a technologist and technology educator at Rutgers University for seven years. Nick has developed popular NPM packages for React Native. He is currently working as an Instructional Designer & Program Coordinator at Rutgers University School Of Social Work. </p>
             <ul class="d_inline_b social_icons">
@@ -61,7 +61,7 @@
         <figure class="t_align_c">
           <img src="images/williamv.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
           <figcaption>
-            <h4 class="m_bottom_5"><a href="#" class="color_dark">William Vasquez</a></h4>
+            <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/williamavasquez/" class="color_dark" target="_blank">William Vasquez</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Full-stack developer</i>
             <p class="m_bottom_15">William is a full-stack web development professional bringing years of experience in different roles in both large and small companies. He founded Phuyu S. A. C., a strategic consulting company for brands, which he successfuly exited in 2014. Of Peruvian descent, William holds an MBA from the Universidad del Pacífico, and has competeted in various startup competitions including UPC University's START UPC, where his team took first place.  </p>
             <ul class="d_inline_b social_icons">
@@ -75,7 +75,7 @@
         <figure class="t_align_c">
           <img src="images/dzmitry.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
           <figcaption>
-            <h4 class="m_bottom_5"><a href="#" class="color_dark">Dzmitry Dubarau</a></h4>
+            <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/ddzmitry/" class="color_dark" target="_blank">Dzmitry Dubarau</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Full-stack developer</i>
             <p class="m_bottom_15">Dzmitry is a Michelin star chef, and was the personal chef to Michael Jordan. He speaks fluently in Russian and Belorussian and holds a degree in Veterinary Medicine. Dzmitry is also a talented software developer and is proficient in various languages including JavaScript and C#. Dzmitry currently works as a full-stack  developer at Telesource.</p>
             <ul class="d_inline_b social_icons">
@@ -89,7 +89,7 @@
         <figure class="t_align_c">
           <img src="images/mattd.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
           <figcaption>
-            <h4 class="m_bottom_5"><a href="#" class="color_dark">Matt Davis</a></h4>
+            <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/mattsplats/" class="color_dark" target="_blank">Matt Davis</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Software developer/Code Tutor</i>
             <p class="m_bottom_15">Matt is a rare coding talent and is currently ranked in the top 10% on Hackerrank. Matt is proficient in a number of languages (Python / Java / C++ / JavaScript), algorithms, data structures, AI and VR (Amazon Echo/Alexa, A-Frame/WebVR), and game development. When he is not building software, he is working as a rockstar coding tutor.
             </p>
