--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -348,7 +348,7 @@
               
               <li class="m_right_8"><a href="" class="color_grey_light github icon_wrap_size_1 d_block"><i class="fa fa-github fa-lg"></i></a></li>
               
-              <li class="m_right_8"><a href="" class="color_grey_light vimeo icon_wrap_size_1 d_block"><i class="fa fa-reddit fa-lg"></i></a></li>
+              <li class="m_right_8"><a href="" class="color_grey_light reddit icon_wrap_size_1 d_block"><i class="fa fa-reddit fa-lg"></i></a></li>
             </ul>
             <br>
             <ul class="hr_list fs_small color_grey_light d_inline_b">
